--- a/mmkartracing.html
+++ b/mmkartracing.html
@@ -30,12 +30,12 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="index.html">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <!--<li><a class="dropdown-item" href="#!">Popular Items</a></li>-->
+                            <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
                 </ul>
@@ -54,14 +54,15 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="assets/FIFA 21 Cover Art 600px.png" alt="FIFA 21 Cover Art" /></div>
+                        src="assets/M&M's Kart Racing 600px.png" alt="M&M's Kart Racing Cover Art" /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">FIFA 21</h1>
+                    <div class="small mb-1">SKU: BST-468</div>
+                    <h1 class="display-5 fw-bolder">M&M's Kart Racing</h1>
                     <div class="fs-5 mb-5">
-                        <span>$99.95</span>
+                        <span class="text-muted text-decoration-line-through">$20.00</span>
+                                $4.95
                     </div>
-                    <p class="lead">FIFA 21 is an association football simulation video game published by Electronic Arts as part of the FIFA series. It is the 28th installment in the FIFA series, and was released on 9 October 2020 for Microsoft Windows, Nintendo Switch, PlayStation 4 and Xbox One. Enhanced versions for the PlayStation 5 and Xbox Series X and Series S were released on 3 December 2020, in addition to a version for Stadia in March 2021.</p>
+                    <p class="lead">M&M's Kart Racing (stylized as m&m's® KART RACING) is a racing video game for the Nintendo DS and Wii, based on the M&M's license and developed by Frontline Studios in co-production with Calaris Studios. It is the 5th of the 7 M&M's video games. The game allows to play one of M&M's characters in 15 race environments. The game was widespread panned upon release and has been cited to be one of the worst video games of all time.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
                             style="max-width: 3rem" />
@@ -81,31 +82,27 @@
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
-                        </div>
                         <!-- Product image-->
-                        <a href="mmkartracing.html">
-                        <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
+                        <a href="fifa21.html">
+                        <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="mmkartracing.html">
-                                <h5 class="fw-bolder">M&M's Kart Racing</h5>
+                                <a href="fifa21.html">
+                                <h5 class="fw-bolder">FIFA 21</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
-                                    <div class="bi-star"></div>
-                                    <div class="bi-star"></div>
-                                    <div class="bi-star"></div>
-                                    <div class="bi-star"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$20.00</span>
-                                $4.95
+                                <span>$99.95</span>
                             </div>
                         </div>
                         <!-- Product actions-->
