--- a/supermariogalaxy2.html
+++ b/supermariogalaxy2.html
@@ -30,12 +30,12 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="index.html">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <!--<li><a class="dropdown-item" href="#!">Popular Items</a></li>-->
+                            <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
                 </ul>
@@ -54,14 +54,15 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="assets/FIFA 21 Cover Art 600px.png" alt="FIFA 21 Cover Art" /></div>
+                        src="assets/Super Mario Galaxy 2 Cover Art 600px.png" alt="Super Mario Galaxy Cover Art" /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">FIFA 21</h1>
+                    <div class="small mb-1">SKU: BST-494</div>
+                    <h1 class="display-5 fw-bolder">Super Mario Galaxy 2</h1>
                     <div class="fs-5 mb-5">
-                        <span>$99.95</span>
+                        <span class="text-muted text-decoration-line-through">$49.95</span>
+                                $29.95
                     </div>
-                    <p class="lead">FIFA 21 is an association football simulation video game published by Electronic Arts as part of the FIFA series. It is the 28th installment in the FIFA series, and was released on 9 October 2020 for Microsoft Windows, Nintendo Switch, PlayStation 4 and Xbox One. Enhanced versions for the PlayStation 5 and Xbox Series X and Series S were released on 3 December 2020, in addition to a version for Stadia in March 2021.</p>
+                    <p class="lead">Super Mario Galaxy 2 is a 2010 platform video game developed and published by Nintendo for the Wii. It was first announced at E3 2009 and is the sequel to 2007's Super Mario Galaxy. It was released worldwide in 2010. The story follows Mario as he pursues the Koopa King, Bowser, into outer space, where he has imprisoned Princess Peach and taken control of the universe using Power Stars and Grand Stars. Mario must travel across various galaxies to recover the Power Stars in order to travel to the center of the universe and rescue Princess Peach.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
                             style="max-width: 3rem" />
@@ -153,19 +154,16 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
-                        </div>
                         <!-- Product image-->
-                        <a href="supermariogalaxy2.html">
-                        <img class="card-img-top" src="assets/Super Mario Galaxy 2 Cover Art 450px.png" alt="Super Mario Galaxy 2 Cover Art" />
+                        <a href="fifa21.html">
+                        <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="supermariogalaxy2.html">
-                                <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                <a href="fifa21.html">
+                                <h5 class="fw-bolder">FIFA 21</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -176,8 +174,7 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$49.95</span>
-                                $29.95
+                                <span>$99.95</span>
                             </div>
                         </div>
                         <!-- Product actions-->
