--- a/supersmashbros.html
+++ b/supersmashbros.html
@@ -30,12 +30,12 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="index.html">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <!--<li><a class="dropdown-item" href="#!">Popular Items</a></li>-->
+                            <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
                 </ul>
@@ -56,7 +56,7 @@
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
                         src="assets/Smash Bros Cover Art 600px.png" alt="Super Smash Bros. Ultimate Cover Art" /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">SKU: BST-498</div>
+                    <div class="small mb-1">SKU: BST-158</div>
                     <h1 class="display-5 fw-bolder">Super Smash Bros. Ultimate</h1>
                     <div class="fs-5 mb-5">
                         <span class="text-muted text-decoration-line-through">$79.95</span>
@@ -118,19 +118,16 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Sale badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
-                        </div>
                         <!-- Product image-->
-                        <a href="supersmashbros.html">
-                        <img class="card-img-top" src="assets/Smash Bros Cover Art 450px.png" alt="Super Smash Bros Ultimate Cover Art" />
+                        <a href="fifa21.html">
+                        <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
                         </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a href="supersmashbros.html">
-                                <h5 class="fw-bolder">Super Smash Bros. Ultimate</h5>
+                                <a href="fifa21.html">
+                                <h5 class="fw-bolder">FIFA 21</h5>
                                 </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
@@ -141,8 +138,7 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$79.95</span>
-                                $69.95
+                                <span>$99.95</span>
                             </div>
                         </div>
                         <!-- Product actions-->
