--- a/supersmashbrosmelee.html
+++ b/supersmashbrosmelee.html
@@ -30,12 +30,12 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="index.html">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <!--<li><a class="dropdown-item" href="#!">Popular Items</a></li>-->
+                            <!--<li><a class="dropdown-item" href="#!">New Arrivals</a></li>-->
                         </ul>
                     </li>
                 </ul>
@@ -54,14 +54,14 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="assets/FIFA 21 Cover Art 600px.png" alt="FIFA 21 Cover Art" /></div>
+                        src="assets/Super Smash Bros Melee Cover Art 600px.png" alt="Super Smash Bros Melee Cover Art" /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">FIFA 21</h1>
+                    <div class="small mb-1">SKU: BST-431</div>
+                    <h1 class="display-5 fw-bolder">Super Smash Bros. Melee</h1>
                     <div class="fs-5 mb-5">
-                        <span>$99.95</span>
+                        <span>$59.95</span>
                     </div>
-                    <p class="lead">FIFA 21 is an association football simulation video game published by Electronic Arts as part of the FIFA series. It is the 28th installment in the FIFA series, and was released on 9 October 2020 for Microsoft Windows, Nintendo Switch, PlayStation 4 and Xbox One. Enhanced versions for the PlayStation 5 and Xbox Series X and Series S were released on 3 December 2020, in addition to a version for Stadia in March 2021.</p>
+                    <p class="lead">Super Smash Bros. Melee is a 2001 crossover fighting video game developed by HAL Laboratory and published by Nintendo for the GameCube. It is the second installment in the Super Smash Bros. series. It features characters from Nintendo video game franchises such as Mario, The Legend of Zelda, Star Fox and Pokémon. The stages and gameplay modes reference or take designs from these franchises as well.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
                             style="max-width: 3rem" />
